# Phase-4

./: README.md  docker-compose.yml
.claude/: settings.local.json
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  next.config.js  package.json
frontend/src/pages/: index.js
history/prompts/devops/: 1-create-helm-chart-for-todo-chatbot.green.prompt.md
k8s/manifests/: todo-secrets.yaml
k8s/todo-chart/: Chart.yaml  README.md  values.yaml
k8s/todo-chart/templates/: configmap.yaml  database.yaml  deployment-backend.yaml  deployment-frontend.yaml  secrets.yaml  service-frontend.yaml
specs/devops/: docker-containers.md  helm-charts.md
