[tool.poetry]
name = "todo-chatbot-backend"
version = "1.0.0"
description = "Backend for the Todo Chatbot application"
authors = ["Developer <developer@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"